<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Goj_Gam</string>
    <string name="home">Home</string>
    <string name="my">My</string>

    <!-- HomeFragment -->
    <string name="fast_delivery">배달 빠른 순</string>
    <string name="low_delivery_tip">배달비 낮은 순</string>
    <string name="default_order">기본 순</string>
    <string name="top_rate">별점 높은 순</string>
    <string name="initialize">초기화</string>

    <!-- RestaurantViewHolder -->
    <string name="grade_format">%1$,.1f</string>
    <string name="review_count">(%1$d++)</string>
    <string name="delivery_time">%1$d~%2$d분</string>
    <string name="delivery_tip">배달팁 %1$,d원~%2$,d원</string>

    <!-- Home -->
    <string name="request_location_manager">위치 권한을 설정해주세요.</string>
    <string name="toast_not_assigned_location_permission">권한을 받지 못했습니다.</string>
    <string name="fail_to_load_address_info">위치 정보를 불러올 수 없습니다.</string>
    <string name="loading" tools:ignore="TypographyEllipsis">로딩중...</string>
    <string name="error_location_dis_found">위치 정보 없음.</string>
    <string name="btn_location_text">이 위치로 주소 설정</string>

    <string name="request_check_location">위치가 맞는지 확인해주세요.</string>

    <!-- Restaurant Detail -->
    <string name="call">전화</string>
    <string name="like">찜</string>
    <string name="share">공유</string>

    <string name="delivery_expected_time">%1$d~%2$d분 소요 예정</string>
    <string name="delivery_tip_range">%1$,d원 ~ %2$,d원</string>

    <!-- 장바구니 개수 -->
    <string name="basket_count">+%d</string>

    <!-- menu -->
    <string name="price">%d원</string>
    <string name="logout">로그아웃</string>
    <string name="empty_result_text">주문 내역이 없습니다.</string>
    <string name="request_google_login_text">구글 로그인이 필요합니다.</string>
    <string name="restaurant_liked_list_title">찜 리스트</string>
    <string name="empty_liked_restaurant_list">찜한 내역이 존재하지 않습니다.</string>
    <string name="menu_like">Like</string>

    <!-- order menu list -->
    <string name="order_list_check">주문 확인</string>
    <string name="do_order">주문하기</string>
    <string name="clear_oder_menu">주문 취소</string>
    <string name="error_to_order">주문하는 도중 알 수 없는 에러가 발생하였습니다.</string>
    <string name="error_to_user">사용자 아이디가 존재하지 않습니다.</string>

    <!-- my -->
    <string name="error_to_order_history">주문내역을 가져오는 도중 문제가 발생하였습니다.</string>
    <string name="order_history_title">주문 내역 : %s</string>

    <!-- review -->
    <string name="add_restaurant_review">%s 리뷰 등록</string>
    <string name="title">제목</string>
    <string name="content">내용</string>
    <string name="add_review">등록하기</string>
    <string name="add_image">이미지 등록하기</string>

    <string name="error_to_upload_image">이미지를 저장하는 중 문제가 발생하였습니다.</string>
    <string name="confirm_text">확인</string>

    <!-- 카메라 -->
    <string name="capture_text">촬영</string>
    <string name="image_preview">이미지 미리보기</string>
    <string name="flash_text">플래시</string>
    <string name="confirm">확인</string>
    <string name="delete">삭제</string>

    <!-- Image Preview -->
    <string name="images_page">(%d/%d)</string>

</resources>